# NanoMind-SLM

./: .gitignore  README.md  pyproject.toml
configs/: base.yaml  data.yaml  model.yaml  tokenization.yaml  training.yaml
docs/: dataset_plan.md
reports/: final_metrics.json  syntax_results.json
reports/figures/: research_log.md
scripts/: audit_dataset_stream.py  audit_filtering.py  check_hardware.py  verify_dataset_source.py
src/nanomind_slm/: __init__.py
src/nanomind_slm/data/: __init__.py  build_tokenized_data.py  build_tokenizer_corpora.py  filtering.py  packing.py  sampling.py  token_dataset.py  train_tokenizers.py
src/nanomind_slm/model/: __init__.py  attention.py  config.py  layers.py  model.py
src/nanomind_slm/training/: loss.py  schedule.py  smoke_train.py  train.py
src/nanomind_slm/utils/: __init__.py  seed.py
tests/: test_attention.py  test_data_filtering.py  test_data_sampling.py  test_model.py  test_model_config.py  test_model_layers.py  test_packing.py  test_seed.py  test_token_dataset.py  test_training_loss.py  test_training_schedule.py
