[project]
name = "nanomind-slm"
version = "0.1.0"
description = "A compact Llama-style decoder-only Transformer trained from scratch for Python code."
readme = "README.md"
authors = [
    { name = "Anuj Pal", email = "officialanuj2020@gmail.com" }
]
requires-python = ">=3.11,<3.15"
dependencies = [
    "datasets>=5.0.0",
    "numpy>=2.4,<2.5",
    "psutil>=7.2.2",
    "pyyaml>=6.0.3",
    "torch>=2.13.0",
]

[project.scripts]
nanomind-slm = "nanomind_slm:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
